--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -4,42 +4,53 @@
 <body>
     <nav th:replace="layouts :: navbar"></nav>
     <div class="container">
-        <div>
-            <h4>Current Projects</h4>
-            <table>
-                <thead>
+        <h3>Main Dashboard</h3>
+        <hr>
+        <div class="row">
+            <div class="col-md-6">
+                <h4>Current Projects</h4>
+                <table class="table table-bordered table-striped">
+                    <thead class="thead-dark">
                     <tr>
                         <th>Project Name</th>
                         <th>Project Stage</th>
                     </tr>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     <tr th:each="aProject : ${projects}">
                         <td th:text="${aProject.name}"/>
                         <td th:text="${aProject.stage}"/>
                     </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-4">
+                <canvas id="myPieChart" height="50" width="50"></canvas>
+                <script>
+                    let chartData = "[[${projectsStatuses}]]"
+                </script>
+            </div>
         </div>
         <div>
             <h4>Current Employees</h4>
-            <table>
-                <thead>
+            <table class="table table-bordered table-striped">
+                <thead class="thead-dark">
                     <tr>
                         <th>First Name</th>
                         <th>Last Name</th>
-                        <th>Email Address</th>
+                        <th>Project Count</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="anEmployee : ${employees}">
+                    <tr th:each="anEmployee : ${employeesProjectCount}">
                         <td th:text="${anEmployee.firstName}"/>
                         <td th:text="${anEmployee.lastName}"/>
-                        <td th:text="${anEmployee.email}"/>
+                        <td th:text="${anEmployee.projectCount}"/>
                     </tr>
                 </tbody>
-            </table>
+            </table>P
         </div>
     </div>
+    <script type="text/javascript" th:src="@{/js/script.js}"></script>
 </body>
 </html>
