--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -5,6 +5,7 @@
     <nav th:replace="layouts :: navbar"></nav>
     <div class="container">
         <h3>Main Dashboard</h3>
+        <span th:text="${versionNumber}"></span>
         <hr>
         <div class="row">
             <div class="col-md-6">
@@ -48,7 +49,7 @@
                         <td th:text="${anEmployee.projectCount}"/>
                     </tr>
                 </tbody>
-            </table>P
+            </table>
         </div>
     </div>
     <script type="text/javascript" th:src="@{/js/script.js}"></script>
