--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -4,10 +4,11 @@
 <body>
     <nav th:replace="layouts :: navbar"></nav>
     <div class="container">
-        <form action="/employees/save" method="POST" th:object="${employee}">
+        <form th:action="@{/employees/save}" method="POST" th:object="${employee}">
             <input type="text" placeholder="First Name" th:field="${employee.firstName}">
             <input type="text" placeholder="Last Name" th:field="${employee.lastName}">
             <input type="email" placeholder="email" th:field="${employee.email}">
+<!--            <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>-->
             <button type="submit">Create Employee</button>
         </form>
     </div>
