--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -4,7 +4,7 @@
 <body>
     <nav th:replace="layouts :: navbar"></nav>
     <div class="container">
-        <form action="/projects/save" method="POST" th:object="${project}">
+        <form th:action="@{/projects/save}" method="POST" th:object="${project}">
             <input type="text" placeholder="Project Name" th:field="${project.name}">
             <select th:field="${project.stage}">
                 <option th:value="NOT_STARTED">Not Started</option>
@@ -16,6 +16,7 @@
             <select th:field="*{employees}" multiple="multiple">
                 <option th:each="employee : ${allEmployees}" th:value="${employee.employeeId}" th:text="${employee.firstName}"></option>
             </select>
+<!--            <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>-->
             <button type="submit">Create Project</button>
         </form>
     </div>
