--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -13,6 +13,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -20,6 +21,15 @@
                     <td th:text="${anEmployee.firstName}"></td>
                     <td th:text="${anEmployee.lastName}"></td>
                     <td th:text="${anEmployee.email}"></td>
+                    <td>
+                        <a th:href="@{/employees/update(id=${anEmployee.employeeId})}" class="btn btn-info btn-sm">
+                            Update
+                        </a>
+                        <a th:href="@{/employees/delete(id=${anEmployee.employeeId})}" class="btn btn-danger btn-sm"
+                           onclick="if(!(confirm('Are you sure you want to delete this employee?'))) return false">
+                            Delete
+                        </a>
+                    </td>
                 </tr>
             </tbody>
         </table>
