--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -5,6 +5,9 @@
     <nav th:replace="layouts :: navbar"></nav>
     <div class="container">
         <form th:action="@{/employees/save}" method="POST" th:object="${employee}">
+<!--            This will be used to bind to the employee that was clicked on (Used for updates)
+                 without this hidden input field, it will insert a new employee -->
+            <input type="hidden" th:field="${employee.employeeId}">
             <input type="text" placeholder="First Name" th:field="${employee.firstName}">
             <input type="text" placeholder="Last Name" th:field="${employee.lastName}">
             <input type="email" placeholder="email" th:field="${employee.email}">
