--- a/src/main/resources/templates/projects/list-projects.html
+++ b/src/main/resources/templates/projects/list-projects.html
@@ -7,6 +7,7 @@
         <h3>Projects Directory</h3>
         <hr>
         <a th:href="@{/projects/new}" class="btn btn-primary btn-sm mb-3">New Project</a>
+        <a th:href="@{/projects/timelines}" class="btn btn-success btn-sm mb-3">View Project Timeline</a>
         <table class="table table-bordered table-striped">
             <thead class="thead-dark">
                 <tr>
