--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -5,19 +5,43 @@
     <nav th:replace="layouts :: navbar"></nav>
     <div class="container">
         <form th:action="@{/projects/save}" method="POST" th:object="${project}">
-            <input type="text" placeholder="Project Name" th:field="${project.name}">
-            <select th:field="${project.stage}">
-                <option th:value="NOT_STARTED">Not Started</option>
-                <option th:value="IN_PROGRESS">In Progress</option>
-                <option th:value="COMPLETED">Completed</option>
-            </select>
-            <textarea cols="30" rows="10" placeholder="Enter project description" th:field="${project.description}"></textarea>
-            <!-- * is used to refer to a property inside the parent object -->
-            <select th:field="*{employees}" multiple="multiple">
-                <option th:each="employee : ${allEmployees}" th:value="${employee.employeeId}" th:text="${employee.firstName}"></option>
-            </select>
+            <div class="form-group-row mb-3">
+                <input type="text" placeholder="Project Name" th:field="${project.name}">
+            </div>
+            <div class="form-group-row mb-3">
+                <select th:field="${project.stage}">
+                    <option th:value="NOT_STARTED">Not Started</option>
+                    <option th:value="IN_PROGRESS">In Progress</option>
+                    <option th:value="COMPLETED">Completed</option>
+                </select>
+            </div>
+            <div class="form-group-row mb-3">
+                <textarea cols="30" rows="10" placeholder="Enter project description" th:field="${project.description}"></textarea>
+            </div>
+            <div class="form-group-row mb-3">
+                <!-- * is used to refer to a property inside the parent object -->
+                <select th:field="*{employees}" multiple="multiple">
+                    <option th:each="employee : ${allEmployees}" th:value="${employee.employeeId}" th:text="${employee.firstName}"></option>
+                </select>
+            </div>
+
+            Project Start Date:
+            <div class="form-group row">
+                <input id="dp3" type="text" class="mb-4 col-2 col-xs-4" value="Start Date" th:field="${project.startDate}">
+            </div>
+
+            Project End Date:
+            <div class="form-group row">
+                <input id="dp4" type="text" class="mb-4 col-2 col-xs-4" value="End Date" th:field="${project.endDate}">
+            </div>
+
+            <script type="text/javascript">
+                $('#dp3').datepicker();
+                $('#dp4').datepicker();
+	        </script>
+
 <!--            <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>-->
-            <button type="submit">Create Project</button>
+            <button type="submit" class="btn btn-info">Create Project</button>
         </form>
     </div>
 </body>
